--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
        
         </section>
     </div>
+     <footer class="bg-gradient-to-r from-blue-500 to-purple-600 text-white py-6 mt-10 rounded-lg">
+                <div class="container mx-auto text-center">
+                    <h2 class="text-2xl font-bold mb-2">Stay Connected</h2>
+                    <p class="mb-4">Follow us on our social media channels for the latest updates.</p>
+                   
+                    <p class="mt-4">© 2023 Creative coder. All rights reserved.</p>
+                </div>
+            </footer>
+
 </body>
 
 </html>
