--- a/index.html
+++ b/index.html
@@ -102,19 +102,14 @@
 
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/ch-abdullah-aa8709329/" target="_blank"
-                class="flex items-center p-4 bg-blue-200 rounded-lg shadow-lg hover:bg-blue-300 transition-transform transform hover:scale-105 fade-in">
+                class="flex items-center p-4  rounded-lg shadow-lg  transition-transform transform hover:scale-105 fade-in"> 
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 mr-2 text-blue-700">
                     <path
                         d="M20 2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM8.7 19H6.5v-7.5h2.2V19zm-1.1-8.6c-.7 0-1.2-.6-1.2-1.2s.6-1.2 1.2-1.2c.7 0 1.2.6 1.2 1.2s-.5 1.2-1.2 1.2zm9.5 8.6h-2.2v-3.6c0-2-2.5-1.9-2.5 0v3.6H10V11.5h2.2v1.1c.9-1.7 4.2-1.9 4.2 1.5v4.9z" />
                 </svg>
                 <span class="font-medium text-gray-800">LinkedIn</span>
             </a>
-
-            <!-- Twitter -->
-       
-        </section>
-    </div>
-     <footer class="bg-gradient-to-r from-blue-500 to-purple-600 text-white py-6 mt-10 rounded-lg">
+            <footer class="bg-gradient-to-r from-blue-500 to-purple-600 text-white py-6 mt-10 rounded-lg">
                 <div class="container mx-auto text-center">
                     <h2 class="text-2xl font-bold mb-2">Stay Connected</h2>
                     <p class="mb-4">Follow us on our social media channels for the latest updates.</p>
@@ -123,6 +118,10 @@
                 </div>
             </footer>
 
+            <!-- Twitter -->
+       
+        </section>
+    </div>
 </body>
 
 </html>
