--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Social Media Links</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
-    <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/564x/d5/b0/4c/d5b04cc3dcd8c17702549ebc5f1acf1a.jpg">
+    <link rel="icon" type="image/x-icon" href="https://elianajade.com/assets/dev-icon-C0vQYVIH.png">
 
 
 
@@ -98,6 +98,37 @@
                         d="M21 15.46l-5.27-.61c-.46-.05-.9.09-1.24.37l-2.54 2.54a15.15 15.15 0 01-6.32-6.32l2.54-2.54c.28-.35.42-.78.37-1.24L8.54 3H3.98C3.44 3 3 3.44 3 3.98a17.9 17.9 0 0017.9 17.9c.54 0 .98-.44.98-.98v-4.56c0-.53-.44-.98-.98-.98z" />
                 </svg>
                 <span class="font-medium text-gray-800">Call Us</span>
+            </a>
+            <a href="https://www.instagram.com/chaudaryabdullah899/" target="_blank"
+                class="flex items-center p-4 bg-pink-100 rounded-lg shadow-lg hover:bg-pink-200 transition-transform transform hover:scale-105 fade-in">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 mr-2 text-pink-600">
+                    <path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2 0 2.4.5 3.2 1.3.8.8 1.3 2 1.3 3.2.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c0 1.2-.5 2.4-1.3 3.2-.8.8-2 1.3-3.2 1.3-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2 0-2.4-.5-3.2-1.3-.8-.8-1.3-2-1.3-3.2-.1-1.3-.1-1.7-.1-4.9s0-3.6.1-4.9c0-1.2.5-2.4 1.3-3.2.8-.8 2-1.3 3.2-1.3 1.3-.1 1.7-.1 4.9-.1zm0-2.2c-3.3 0-3.7 0-5 .1-1.5 0-2.9.6-3.9 1.6-1 1-1.6 2.4-1.6 3.9-.1 1.3-.1 1.7-.1 5s0 3.7.1 5c0 1.5.6 2.9 1.6 3.9 1 1 2.4 1.6 3.9 1.6 1.3.1 1.7.1 5 .1s3.7 0 5-.1c1.5 0 2.9-.6 3.9-1.6 1-1 1.6-2.4 1.6-3.9.1-1.3.1-1.7.1-5s0-3.7-.1-5c0-1.5-.6-2.9-1.6-3.9-1-1-2.4-1.6-3.9-1.6-1.3-.1-1.7-.1-5-.1zM12 6.2c-3.2 0-5.8 2.6-5.8 5.8s2.6 5.8 5.8 5.8 5.8-2.6 5.8-5.8-2.6-5.8-5.8-5.8zm0 10.4c-2.5 0-4.6-2.1-4.6-4.6s2.1-4.6 4.6-4.6 4.6 2.1 4.6 4.6-2.1 4.6-4.6 4.6zm6.5-10.4c-.9 0-1.6.7-1.6 1.6s.7 1.6 1.6 1.6 1.6-.7 1.6-1.6-.7-1.6-1.6-1.6z" />
+                </svg>
+                <span class="font-medium text-gray-800">Instagram</span>
+            </a>
+
+            <a href="https://www.facebook.com/profile.php?id=61565783949842&sk=about_work_and_education" target="_blank"
+                class="flex items-center p-4 bg-blue-100 rounded-lg shadow-lg hover:bg-blue-200 transition-transform transform hover:scale-105 fade-in">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 mr-2 text-blue-600">
+                    <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.325v21.35C0 23.4.6 24 1.325 24h21.35C23.4 24 24 23.4 24 22.675V1.325C24 .6 23.4 0 22.675 0zM12 2.5c2.5 0 3.1 0 4.1.1 1.1.1 1.8.3 2.3.5.5.2.9.5 1.3.9.4.4.7.8.9 1.3.2.5.4 1.2.5 2.3v3.5h-3.5c-1.1 0-1.5.5-1.5 1.5v3.5h5.5l-.7 5.5h-4.8V24H12v-5.5h-3.5v-5.5H12V9.5c0-2.1.5-3.5 3.5-3.5z" />
+                </svg>
+                <span class="font-medium text-gray-800">Facebook</span>
+            </a>
+
+            <a href="https://github.com/Chaudaryabdullah89" target="_blank"
+                class="flex items-center p-4 bg-gray-100 rounded-lg shadow-lg hover:bg-gray-200 transition-transform transform hover:scale-105 fade-in">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 mr-2 text-gray-600">
+                    <path d="M12 2C6.48 2 2 6.48 2 12c0 4.41 2.87 8.16 6.84 9.49.5.09.68-.22.68-.49 0-.24-.01-.87-.01-1.71-2.79.61-3.38-1.35-3.38-1.35-.45-1.14-1.1-1.44-1.1-1.44-.9-.61.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.89 1.53 2.34 1.09 2.91.83.09-.64.35-1.09.64-1.34-2.22-.25-4.56-1.11-4.56-4.93 0-1.09.39-1.98 1.03-2.68-.1-.25-.45-1.27.1-2.65 0 0 .84-.27 2.75 1.02A9.56 9.56 0 0112 5.83c.85.004 1.7.115 2.5.34 1.91-1.29 2.75-1.02 2.75-1.02.55 1.38.2 2.4.1 2.65.64.7 1.03 1.59 1.03 2.68 0 3.83-2.34 4.68-4.56 4.93.36.31.68.92.68 1.85 0 1.34-.01 2.42-.01 2.75 0 .27.18.59.69.49C21.13 20.16 24 16.41 24 12c0-5.52-4.48-10-10-10z" />
+                </svg>
+                <span class="font-medium text-gray-800">GitHub</span>
+            </a>
+
+            <a href="https://www.tiktok.com/@chabdullah_89" target="_blank"
+                class="flex items-center p-4 bg-black rounded-lg shadow-lg hover:bg-gray-800 transition-transform transform hover:scale-105 fade-in">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 mr-2 text-white">
+                    <path d="M12 2c-5.5 0-10 4.5-10 10s4.5 10 10 10c5.5 0 10-4.5 10-10S17.5 2 12 2zm1 17.9v-5.6h-2v5.6c-3.3-.2-6-2.8-6-6.1 0-3.4 2.7-6.1 6-6.1 3.3 0 6 2.7 6 6.1 0 3.3-2.7 5.9-6 6.1zm1-10.9h-2V7.1c0-.6.4-1 1-1s1 .4 1 1v1.9z" />
+                </svg>
+                <span class="font-medium text-gray-800">TikTok</span>
             </a>
 
             <!-- LinkedIn -->
