--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-6 h-6 mr-2 text-white">
                     <path d="M12 2c-5.5 0-10 4.5-10 10s4.5 10 10 10c5.5 0 10-4.5 10-10S17.5 2 12 2zm1 17.9v-5.6h-2v5.6c-3.3-.2-6-2.8-6-6.1 0-3.4 2.7-6.1 6-6.1 3.3 0 6 2.7 6 6.1 0 3.3-2.7 5.9-6 6.1zm1-10.9h-2V7.1c0-.6.4-1 1-1s1 .4 1 1v1.9z" />
                 </svg>
-                <span class="font-medium text-gray-800">TikTok</span>
+                <span class="font-medium text-white">TikTok</span>
             </a>
 
             <!-- LinkedIn -->
