--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </svg>
                 <span class="font-medium text-gray-800">LinkedIn</span>
             </a>
-            <footer class="bg-gradient-to-r from-blue-500 to-purple-600 text-white py-6 mt-10 rounded-lg">
+            <footer class="bg-gradient-to-r from-blue-500 to-purple-600 text-white py-6 mt-10 rounded-lg px-4 sm:px-6">
                 <div class="container mx-auto text-center">
                     <h2 class="text-2xl font-bold mb-2">Stay Connected</h2>
                     <p class="mb-4">Follow us on our social media channels for the latest updates.</p>
