--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <div class="w-full max-w-3xl p-6 bg-white rounded-lg shadow-lg transform transition-all hover:scale-105 duration-500 ease-in-out slide-in">
         <!-- Profile Section -->
 
+        <div class="flex items-center gap-2 mb-6">
+            <a href="https://chabdullah-dev.netlify.app" class="p-2 bg-gray-400 rounded-full shadow-lg hover:bg-gray-300 transition-colors ">
+                <i class="ri-arrow-left-line text-gray-800"> </i> Back
+            </a>
+        </div>
         <div class="relative flex flex-col items-center mb-8 cursor-pointer group" onclick="window.location.href='https://chabdullah-dev.netlify.app/'">
             <img src="https://chabdullah-dev.netlify.app/img/standing.jpg" alt="Your Name"
                 class="w-40 h-40 rounded-full object-cover shadow-lg mb-4 fade-in">
