--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" type="image/x-icon" href="https://elianajade.com/assets/dev-icon-C0vQYVIH.png">
 
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css">
 
     <style>
         @keyframes slideIn {
