--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body class="bg-gradient-to-r from-white to-black min-h-screen flex items-center justify-center">
     
-    <div class="w-full max-w-3xl p-6 bg-white rounded-lg shadow-lg transform transition-all hover:scale-105 duration-500 ease-in-out slide-in">
+    <div class="w-full max-w-3xl p-6 bg-white rounded-lg shadow-lg transform transition-all  duration-500 ease-in-out slide-in">
         <!-- Profile Section -->
 
         <div class="flex items-center gap-2 mb-6">
